# auto-sdd

./: .env.local.example  .gitignore  .handoff.md  .onboarding-state  .prompt-stash.json  ACTIVE-CONSIDERATIONS.md  ARCHITECTURE.md  Agents.md  CLAUDE.md  DECISIONS.md  HOW-I-WORK-WITH-GENERATIVE-AI.md  INDEX.md  ONBOARDING.md  README-256GB.md  README.md  build-loop-failure-investigation.md  demo.sh  download-models.sh  general-estimates.jsonl  install.sh  start.sh  status.sh  stop.sh  tsconfig.tsbuildinfo
.claude/: settings.local.json
.cursor/: hooks.json
.sdd-config/: project.yaml
.specs/: HANDOFF-PROTOCOL.md  README.md  learnings.md  mapping.md  roadmap.md  vision.md
Brians-Notes/: CODE-REVIEW-2026-02-21.md  HANDOFF-PROMPT.md  NEW-CHAT-PROMPT.md  PROMPT-ENGINEERING-GUIDE.md  SETUP.md
WIP/: auto-qa-cre-validation.md  bash-to-python-conversion.md  campaign-intelligence-system.md  post-campaign-validation.md  schema-standardization-prompt.md
py/: general-estimates.jsonl  pyproject.toml
py/auto_sdd/: conventions.md
py/auto_sdd/lib/: build_gates.py  codebase_summary.py  comp_detail.py  config.py  learnings_writer.py  prompt_builder.py  runtime_attribution.py
py/auto_sdd/scripts/: build_loop.py  comp_detail.py  dashboard.py  overnight_autonomous.py  post_campaign_validation.py
py/tests/: conftest.py  test_build_gates.py  test_build_loop.py  test_comp_detail.py  test_config.py  test_dashboard.py  test_dry_run.py  test_eval_sidecar.py  test_integration_pipeline.py  test_overnight_autonomous.py  test_post_campaign_validation.py  test_prompt_builder.py
(+184 files in other folders)
